# dusk-audio-plugins

./: .coderabbit.yaml  .gitignore  .gitmodules  .next-session-prompt.md  CLAUDE.md  CMakeLists.txt  CMakeLists_test.txt  CONTRIBUTING.md  HANDOFF_FOIL_PLATE.md  JuceHeader.h  MAC_HANDOFF_PROMPT.md  MAC_SESSION_CONTEXT.md  README.md  ROOM_REVERB_FIX_SUMMARY.md  build_all.sh  build_test.sh  compare_test.cpp  direct_reverb_test.cpp  minimal_test  minimal_test.cpp  quick_room_test.sh  rebuild_all.sh  rebuild_plugins.sh  reverb_test.cpp  reverb_test.raw  simple_reverb_test.cpp  simple_test_vst3.cpp  test_all_reverbs.cpp  test_all_signal_paths  test_all_signal_paths.cpp  test_build.sh  test_compressor.cpp  test_debug.cpp  test_dragonfly.sh  test_dragonfly_exact  test_dragonfly_exact.cpp  test_exact_juce_scenario  test_exact_juce_scenario.cpp  test_final_fix  test_final_fix.cpp  (+48 more)
plugins/4k-eq/: CHANGELOG_v1.0.1.md  CMakeLists.txt  ConsoleSaturation.h  EQCurveDisplay.cpp  EQCurveDisplay.h  FourKEQ.cpp  FourKEQ.h  FourKEQPresets.h  FourKEQ_Fixed.cpp  FourKLookAndFeel.cpp  KNOB_MARKINGS.md  LV2_INLINE_DISPLAY_NOTES.md  PATREON_BACKERS_GUIDE.md  PRODUCTION_READINESS.md  PatreonBackers.h  PluginEditor.cpp  PluginEditor.h  QUICKSTART.md  README.md  RELEASE_SUMMARY_v1.0.1.md  SSLSaturation.h  SpectrumAnalyzer.h
plugins/4k-eq/core/: ConsoleSaturationCore.h  FourKEQDSP.cpp  FourKEQDSP.hpp
plugins/4k-eq/dpf-plugin/: CMakeLists.txt  DistrhoPluginInfo.h  FourKEQAccess.hpp  FourKEQParams.hpp  FourKEQPlugin.cpp  FourKEQUI.cpp
plugins/DrummerClone/: CMakeLists.txt  DrummerClone.jucer  PROJECT_STATUS.md  README.md
plugins/DrummerClone/Source/: DrumMapping.h  DrummerDNA.cpp  DrummerDNA.h  DrummerEngine.cpp  DrummerEngine.h  FollowModePanel.cpp  FollowModePanel.h  GrooveFollower.cpp  GrooveFollower.h  GrooveLearner.cpp  GrooveLearner.h  GrooveTemplateGenerator.cpp  GrooveTemplateGenerator.h  MidiExporter.cpp  MidiExporter.h  MidiGrooveExtractor.cpp  MidiGrooveExtractor.h  PatternLibrary.cpp  PatternLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StepSequencer.cpp  StepSequencer.h  TransientDetector.cpp  TransientDetector.h  VariationEngine.cpp  VariationEngine.h
plugins/DrummerClone/patterns/: README.md
plugins/DuskAmp/: BETA.md  CMakeLists.txt  THIRDPARTY-LICENSES.txt
plugins/DuskAmp/src/: DefaultCabIRs.h  FactoryPresets.h  ParamIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/DuskAmp/tests/: duskamp_test.py  tone_stack_validate.py
plugins/DuskVerb/: CMakeLists.txt
plugins/DuskVerb/scripts/: extract_er_settings.py  spectral_model.py  test_stereo_all.py  test_stereo_balance.py
plugins/DuskVerb/src/: FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetCorrectionFilters.h  PresetTapPositions.h  VVERTapData.h
plugins/DuskVerb/tests/: .gitignore  analyze_reverb.py
plugins/DuskVerb/tools/: analyze_ir.py  optimize_preset.py  (+4 more)
plugins/PlateReverb/: CMakeLists.txt  DattorroPlate.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/StudioReverb/: CMakeLists.txt
plugins/StudioVerb/: AUDIO_SAFETY_IMPROVEMENTS.md  CMakeLists.txt  JucePluginDefines.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  ReverbEngine.cpp  ReverbEngine.h  ReverbEngineEnhanced.cpp  ReverbEngineEnhanced.h  TESTING_GUIDE.md  build.sh
plugins/Suede200/: CMakeLists.txt
plugins/TapeEcho/: CMakeLists.txt
plugins/TapeMachine/: CMakeLists.txt  README.md  TapeMachine.jucer
plugins/chord-analyzer/: CMakeLists.txt
plugins/convolution-reverb/: AifcStreamWrapper.h  CMakeLists.txt  ConvolutionEngine.h  ConvolutionReverbLookAndFeel.cpp  ConvolutionReverbLookAndFeel.h  EnvelopeProcessor.h  IRBrowser.cpp  IRBrowser.h  IRWaveformDisplay.cpp  IRWaveformDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WetSignalEQ.h
plugins/groovemind/: CMakeLists.txt
plugins/multi-comp/: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  AppConfig.h  CMakeLists.txt  CompressorPresets.h  EnhancedCompressorEditor.cpp  EnhancedCompressorEditor.h  ModernCompressorPanels.h  TestRunner.cpp  UniversalCompressor.cpp  UniversalCompressor.h  UniversalCompressorTests.cpp  multicomp.cpp
plugins/multi-q/: ADAASaturation.h  AnalogMatchedBiquad.h  BandDetailPanel.cpp  BandDetailPanel.h  BandStripComponent.cpp  BandStripComponent.h  BritishEQCurveDisplay.cpp  BritishEQCurveDisplay.h  BritishEQProcessor.h  CMakeLists.txt  ConsoleSaturation.h  DynamicEQProcessor.h  EQBand.h  EQGraphicDisplay.cpp  EQGraphicDisplay.h  EQMatchProcessor.h  F6KnobLookAndFeel.h  FFTAnalyzer.cpp  FFTAnalyzer.h  LinearPhaseEQProcessor.h  MultiQ.cpp  MultiQ.h  MultiQEditor.cpp  MultiQEditor.h  MultiQLookAndFeel.h  MultiQPresets.h  OutputLimiter.h  PultecCurveDisplay.cpp  PultecCurveDisplay.h  PultecLookAndFeel.h  PultecProcessor.h  SSLSaturation.h  SafeFloat.h  TubeEQCurveDisplay.cpp  TubeEQCurveDisplay.h  TubeEQLookAndFeel.h  TubeEQProcessor.h
plugins/multi-synth/: Arpeggiator.cpp  Arpeggiator.h  CMakeLists.txt  EffectsEngine.h  FilterEngine.h  ModMatrix.h  MultiSynth.cpp  MultiSynth.h  MultiSynthEditor.cpp  MultiSynthEditor.h  MultiSynthLookAndFeel.cpp  MultiSynthLookAndFeel.h  MultiSynthVoice.cpp  MultiSynthVoice.h  OscillatorEngine.h  UnisonEngine.h
plugins/neural-amp/: CMakeLists.txt
plugins/spectrum-analyzer/: CMakeLists.txt
plugins/tape-echo/: CMakeLists.txt
plugins/universal-compressor/: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  CHANGELOG.md  CMakeLists.txt  EnhancedCompressorEditor.cpp  EnhancedCompressorEditor.h  ModernCompressorPanels.h  PRODUCTION_READINESS.md  TESTING.md  TODO_SUMMARY.md  UniversalCompressor.cpp  UniversalCompressor.h  UniversalCompressorTests.cpp
tests/duskamp_cpu_harness/: CMakeLists.txt  cpu_harness.cpp
tests/duskamp_golden_render/: CMakeLists.txt  golden_render.cpp
tests/duskverb_render/: CMakeLists.txt  analyze_render.py  au_native_render.mm  render.cpp
tests/duskverb_simd_parity/: CMakeLists.txt  test_parity.cpp
(+1057 files in other folders)
